# SGA-site

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
Database Design/: SGA-Database_Design.eddx
SGA_site/: asgi.py  settings.py  urls.py  wsgi.py
main/: models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_remove_person_creation_date.py
main/static/main/: style.css
main/static/main/style/: style.css
main/templates/main/: about.html  base.html  contact.html  index.html  sga_officials.html
